2008-01-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/factorizing.R (checkSchur): and more tests for checking Schur()

	* inst/test-tools.R (isOrthogonal): new function; also re-sort file structure

2008-01-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/ngTMatrix.R: allow as(<numeric matrix>, "ngTMatrix") and hence
	coercion to "nMatrix" and "pMatrix"

	* R/AllClass.R: "Schur" class;  "number" class union
	* man/number-class.Rd:
	* man/Schur-class.Rd:

	* R/eigen.R (.dgeSchur): utility, and return "Schur" class
	(.simpleSchur): Schur() method for diagonal matrices
	(.triSchur):    Schur() method for triangular matrices
	(Schur.sym):    Schur() for symmetric matrices {building on eigen()}.


2008-01-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgCMatrix.c (dgCMatrix_QR): set @Dim slot (as per doc)

2008-01-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/CHMfactor.R (solve): method for b="numeric", but also b="ANY"
		in order to ensure 'system = *' is not lost;
		formals()$system instead of cut&paste.
	* tests/factorizing.R: test solve(<CHM..>, <numeric>)

2008-01-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date): make ready for release --> 0.999375-4

	* R/dgeMatrix.R: fix rcond() method for "dgeMatrix".

2007-12-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/pMatrix.R: as(*, "matrix") now returns 0/1 *integer* matrix,
		and hence does as.vector(.).
	* man/pMatrix-class.Rd: docs
	* R/sparseMatrix.R: fix for printing "integer sparse"

	* tests/Class+Meth.R (tstMatrixClass): test M[FALSE], M[2] etc

	* R/Matrix.R and others: use "exact" function argument list for
		both "["   : (x, i,j, ..., drop)
		and  "[<-" : (x, i,j, ..., value)

	* R/denseMatrix.R: M[i] and M[i] <- v  (i vector) now work
	* R/Tsparse.R (replTmat):    ditto
	* R/diagMatrix.R (replDiag): ditto
	* R/Csparse.R (replCmat):    ditto {was it worth the pain?}
	* tests/indexing.R: testing the above
